--- a/PublicApi/appsettings.json
+++ b/PublicApi/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\MSSQLSERVERNEW;Initial Catalog=ZadizajnHatu;Integrated Security=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
