--- a/PublicApi/appsettings.json
+++ b/PublicApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\MSSQLSERVERNEW;Initial Catalog=ZadizajnHatu;Integrated Security=True"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=zh;Username=postgres;Password=zadizaynhatu"
   },
 
   "Logging": {
