--- a/PublicApi/Properties/launchSettings.json
+++ b/PublicApi/Properties/launchSettings.json
@@ -11,7 +11,8 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchUrl": "http://localhost:51662",
+      "launchBrowser": true,
+      "launchUrl": "http://localhost:51662/swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
