--- a/PublicApi/appsettings.json
+++ b/PublicApi/appsettings.json
@@ -4,7 +4,7 @@
     "PostgressSQLConnectionString": "Host=localhost;Port=5432;Database=zh;Username=postgres;Password=zadizaynhatu"
   },
 
-  "UsePostgress": false,
+  "UsePostgress": true,
 
   "Logging": {
     "LogLevel": {
