Redesign PublicApi DesignStudio

--- a/PublicApi/appsettings.json
+++ b/PublicApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "MSSQLConnectionString": "Data Source=.;Initial Catalog=ZadizajnHatu;Integrated Security=True",
-    "PostgressSQLConnectionString": "Host=localhost;Port=5432;Database=zh;Username=postgres;Password=zadizaynhatu"
+    "PostgressSQLConnectionString": "Host=localhost;Port=5432;Database=zh;Username=zh_user;Password=zadizaynhatu"
   },
 
   "UsePostgress": true,
