Add postgresql docker-compose and migration

--- a/PublicApi/appsettings.json
+++ b/PublicApi/appsettings.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
     "MSSQLConnectionString": "Data Source=.;Initial Catalog=ZadizajnHatu;Integrated Security=True",
-    "PostgressSQLConnectionString": "Host=localhost;Port=5432;Database=zh;Username=zh_user;Password=zadizaynhatu"
+    "PostgressSQLConnectionString": "Host=192.168.99.100;Port=5432;Database=postgres;Username=postgres;Password=changeme"
   },
 
-  "UsePostgress": false,
+  "UsePostgress": true,
 
   "Logging": {
     "LogLevel": {
