Add methods to controller for worker

--- a/PublicApi/appsettings.json
+++ b/PublicApi/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "MSSQLConnectionString": "Data Source=.;Initial Catalog=ZadizajnHatu;Integrated Security=True",
-    "PostgressSQLConnectionString": "Host=192.168.99.100;Port=5432;Database=postgres;Username=postgres;Password=changeme"
+    //"PostgressSQLConnectionString": "Host=192.168.99.100;Port=5432;Database=postgres;Username=postgres;Password=changeme",
+    "PostgressSQLConnectionString": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=changeme"
   },
 
   "UsePostgress": true,
